--- a/Accessories.html
+++ b/Accessories.html
@@ -153,7 +153,7 @@
     <div class="background">
         <nav class="navbar navbar-expand-md">
             <div class="container-xxl">
-                <a href="home.html" id="top" class="nav-brand nav-logo">
+                <a href="index.html" id="top" class="nav-brand nav-logo">
                     <span class="text-light"><span style="color:orange;">Amy</span>Accessory</span>
                 </a>
 
@@ -205,7 +205,7 @@
                     <div class="row mx-2 mx-md-1">
                         <div class="col-lg-2 col-md-3 col-sm-4 col-4 mt-4">
                             <ul class="breadcrumb">
-                                <li class="breadcrumb-item"><a href="home.html" class=" main-link-header">Home</a></li>
+                                <li class="breadcrumb-item"><a href="index.html" class=" main-link-header">Home</a></li>
                                 <li class="breadcrumb-item text-light">Cell Phones</li>
                             </ul>
                             <ul>
