--- a/Computers.html
+++ b/Computers.html
@@ -41,8 +41,11 @@
             width: 60%;
             margin-left: 100px;
         }
-        .nav-icons:hover {
+        .nav-icons{
             color: white;
+        }
+        .nav-icons:hover {
+            color: orange;
         }
 
         .main-list {
@@ -105,21 +108,21 @@
 
         .footer-list {
             list-style-type: none;
-            color: black;
+            color: lightgrey;
             line-height: 40px;
             font-size: 18px;
             font-weight: lighter;
         }
 
         .footer-paraghap-list {
-            color: black;
+            color: lightgrey;
             line-height: 40px;
             width: 80%;
             margin: 0px auto;
         }
 
         .footer-link {
-            color: black;
+            color: lightgrey;
             line-height: 40px;
             font-size: 18px;
             font-weight: lighter;
@@ -149,7 +152,7 @@
     <div class="container-fliud background">
         <nav class="navbar navbar-expand-md">
             <div class="container-xxl">
-                <a href="home.html" id="top" class="nav-brand nav-logo">
+                <a href="index.html" id="top" class="nav-brand nav-logo">
                     <span class="text-light"><span style="color:orange;">Amy</span>Accessory</span>
                 </a>
 
@@ -201,9 +204,9 @@
                     <div class="row mx-2 mx-md-1">
                         <div class="col-lg-2 col-md-3 col-sm-4 col-4 mt-4">
                             <ul class="breadcrumb">
-                                <li class="breadcrumb-item"><a href="home.html" class=" main-link-header">Home</a>
+                                <li class="breadcrumb-item"><a href="index.html" class=" main-link-header">Home</a>
                                 </li>
-                                <li class="breadcrumb-item text-light">Home Appliances</li>
+                                <li class="breadcrumb-item text-light">Computers</li>
                             </ul>
                             <ul>
                                 <li class="main-list mt-5"><a href="Computers.html"
