--- a/Mobile.html
+++ b/Mobile.html
@@ -16,7 +16,8 @@
         }
 
         .background {
-            background-image: linear-gradient(to left, hsla(240, 100%, 50%, 0.811), hsla(0, 0%, 0%, 0.791), hsla(0, 0%, 0%, 0.791));
+            /* background-image: linear-gradient(to left, hsla(240, 100%, 50%, 0.811), hsla(0, 0%, 0%, 0.791), hsla(0, 0%, 0%, 0.791)); */
+            background-color: black;
         }
 
         .nav-logo {
@@ -106,7 +107,8 @@
 
         .footer-img {
             /* background-image: url(images/laptop-backgroud.jpg); */
-            background-color: hsla(0, 0%, 50%, 0.382);
+            /* background-color: hsla(0, 0%, 50%, 0.382); */
+            background-color: hsla(0, 0%, 50%, 0.169);
             height: auto;
             color: lightgrey;
             width: 100%;
@@ -116,21 +118,21 @@
 
         .footer-list {
             list-style-type: none;
-            color: black;
+            color: lightgrey;
             line-height: 40px;
             font-size: 18px;
             font-weight: lighter;
         }
 
         .footer-paraghap-list {
-            color: black;
+            color: lightgrey;
             line-height: 40px;
             width: 80%;
             margin: 0px auto;
         }
 
         .footer-link {
-            color: black;
+            color: lightgrey;
             line-height: 40px;
             font-size: 18px;
             font-weight: lighter;
@@ -161,7 +163,7 @@
     <div class="container-fliud background">
         <nav class="navbar navbar-expand-md">
             <div class="container-xxl">
-                <a href="home.html" id="top" class="nav-brand nav-logo">
+                <a href="index.html" id="top" class="nav-brand nav-logo">
                     <span class="text-light"><span style="color:orange;">Amy</span>Accessory</span>
                 </a>
 
@@ -212,7 +214,7 @@
                     <div class="row mx-2 mx-md-1">
                         <div class="col-lg-2 col-md-3 col-sm-4 col-4 mt-4">
                             <ul class="breadcrumb">
-                                <li class="breadcrumb-item"><a href="home.html" class=" main-link-header">Home</a></li>
+                                <li class="breadcrumb-item"><a href="index.html" class=" main-link-header">Home</a></li>
                                 <li class="breadcrumb-item text-light">Cell Phones</li>
                             </ul>
                             <ul>
