--- a/each-products/bluetooth2.html
+++ b/each-products/bluetooth2.html
@@ -146,7 +146,7 @@
                             <li>
                                 <hr class="divider">
                             </li>
-                            <li class="nav-list"><a href="/Accessories.html" class="nav-link a-link ">Accessories</a>
+                            <li class="nav-list"><a href="Accessories.html" class="nav-link a-link ">Accessories</a>
                             </li>
                             <li>
                                 <hr class="divider">
