--- a/contact.html
+++ b/contact.html
@@ -159,7 +159,7 @@
     <div class="container-fliud background">
         <nav class="navbar navbar-expand-md">
             <div class="container-xxl">
-                <a href="home.html" id="top" class="nav-brand nav-logo">
+                <a href="index.html" id="top" class="nav-brand nav-logo">
                     <span class="text-light"><span style="color:orange;">Amy</span>Accessory</span>
                 </a>
 
