--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
         <div class="container-fliud background">
             <nav class="navbar navbar-expand-md">
                 <div class="container-xxl">
-                    <a href="home.html" id="top" class="nav-brand nav-logo">
+                    <a href="index.html" id="top" class="nav-brand nav-logo">
                         <span><span style="color:orange;">Amy</span>Accessory</span>
                     </a>
 
