--- a/Accessories.html
+++ b/Accessories.html
@@ -97,9 +97,12 @@
             margin-top: 150px;
         }
 
+        footer {
+            margin-top: 150px;
+        }
+
         .footer-img {
-            /* background-image: url(images/laptop-backgroud.jpg); */
-            background-color: hsla(0, 0%, 50%, 0.382);
+            background-color: hsla(0, 0%, 50%, 0.169);
             height: auto;
             color: lightgrey;
             width: 100%;
@@ -107,23 +110,30 @@
             background-size: cover;
         }
 
+        .footer-header {
+            margin: 50px 30px 0px 30px
+        }
+
         .footer-list {
             list-style-type: none;
-            color: black;
+            color: lightgrey;
             line-height: 40px;
             font-size: 18px;
             font-weight: lighter;
         }
+        .footer-list2 {
+            margin-top: 40px;
+        }
 
         .footer-paraghap-list {
-            color: black;
+            color: lightgrey;
             line-height: 40px;
             width: 80%;
-            margin: 0px auto;
+           margin-left: 20px;
         }
 
         .footer-link {
-            color: black;
+            color: lightgrey;
             line-height: 40px;
             font-size: 18px;
             font-weight: lighter;
