--- a/contact.html
+++ b/contact.html
@@ -103,33 +103,43 @@
         footer{
             height: auto;
         }
+        footer {
+            margin-top: 150px;
+        }
+
         .footer-img {
-            margin: 30px;
-            /* background-image: url(images/laptop-backgroud.jpg); */
-            background-color: transparent;
+            background-color: hsla(0, 0%, 50%, 0.169);
             height: auto;
             color: lightgrey;
+            width: 100%;
             background-repeat: no-repeat;
             background-size: cover;
         }
 
+        .footer-header {
+            margin: 50px 30px 0px 30px
+        }
+
         .footer-list {
             list-style-type: none;
-            color: black;
+            color: lightgrey;
             line-height: 40px;
             font-size: 18px;
             font-weight: lighter;
         }
+        .footer-list2 {
+            margin-top: 40px;
+        }
 
         .footer-paraghap-list {
-            color: black;
+            color: lightgrey;
             line-height: 40px;
             width: 80%;
-            margin: 0px auto;
+           margin-left: 20px;
         }
 
         .footer-link {
-            color: black;
+            color: lightgrey;
             line-height: 40px;
             font-size: 18px;
             font-weight: lighter;
@@ -149,7 +159,7 @@
         }
 
         .copy-right-box {
-            height:80px;
+            height: 80px;
             margin-top: 50px;
         }
     </style>
