--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
                     <div class="collapse align-items-center justify-content-center navbar-collapse " id="main-nav">
                         <div class="ul-list">
                             <ul class="navbar-nav  d-flex">
-                                <li class="nav-list"><a href="Shop.html" class="nav-link a-link ">Shop</a></li>
+                                <li class="nav-list"><a href="shop.html" class="nav-link a-link ">Shop</a></li>
                                 <li>
                                     <hr class="divider">
                                 </li>
@@ -345,16 +345,12 @@
                         <div class="col-lg-6 col-md-6">
                             <img src="image/redmi.jpg" class="w-100 phone-img" alt="">
                             <div class="img-text">
-                                <h5>Quality Apple produts</h5>
+                                <h5>Quality Mobile Phones</h5>
                                 <span>Avaliable in different types</span>
                             </div>
                         </div>
                         <div class="col-lg-6 col-md-6">
                             <img src="image/oppo.jpg" class="w-100 phone-img" alt="">
-                            <div class="img-text">
-                                <h5>Quality Samsung produts</h5>
-                                <span>Avaliable in different types</span>
-                            </div>
                         </div>
                     </div>
                     <hr class="text-light mx-3">
