--- a/shop.html
+++ b/shop.html
@@ -16,9 +16,8 @@
            background-color: black;
         }
         nav{
-            background-image: linear-gradient(to left, hsla(240, 100%, 50%, 0.811), hsla(0, 0%, 0%, 0.791), hsla(0, 0%, 0%, 0.791));
+            background-image: linear-gradient(to left, hsla(240, 100%, 50%, 0.811),hsla(240, 100%, 50%, 0.811),hsla(240, 100%, 50%, 0.811), hsla(0, 0%, 0%, 0.791));
         }
-
         .nav-logo {
             text-decoration: none;
             font-size: 25px;
@@ -350,7 +349,7 @@
                         <div class="col-lg-2 col-md-3 col-sm-4 col-4 mt-4">
                             <ul class="breadcrumb">
                                 <li class="breadcrumb-item"><a href="index.html" class=" main-link-header">Home</a></li>
-                                <li class="breadcrumb-item text-light">Cell Phones</li>
+                                <li class="breadcrumb-item text-light">Shop</li>
                             </ul>
                             <ul>
                                 <li class="main-list mt-5"><a href="shop.html" class="main-links shop">Shop</a>
