--- a/Mobile.html
+++ b/Mobile.html
@@ -19,7 +19,7 @@
             background-color: black;
         }
         nav{
-            background-image: linear-gradient(to left, hsla(240, 100%, 50%, 0.811), hsla(0, 0%, 0%, 0.791), hsla(0, 0%, 0%, 0.791));
+            background-image: linear-gradient(to left, hsla(240, 100%, 50%, 0.811),hsla(240, 100%, 50%, 0.811), hsla(240, 100%, 50%, 0.811), hsla(0, 0%, 0%, 0.791));
         }
         .nav-logo {
             text-decoration: none;
@@ -52,6 +52,9 @@
 
         .nav-icons:hover {
             color: white;
+        }
+        .menu-icon{
+            color: orange;
         }
 
         .content-container {
@@ -284,7 +287,7 @@
                     <span class="text-light"><span style="color:orange;">Amy</span>Accessory</span>
                 </a>
 
-                <button class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#main-nav"
+                <button class="navbar-toggler  menu-icon" data-bs-toggle="collapse" data-bs-target="#main-nav"
                     aria-label=" toggler navigation" aria-controls="main-nav">
                     <span class="navbar-toggler-icon"></span>
                 </button>
