--- a/each-products/lg-frige.html
+++ b/each-products/lg-frige.html
@@ -17,7 +17,14 @@
         }
 
         .background {
-            background-image: linear-gradient(to left, hsla(240, 100%, 50%, 0.811), hsla(0, 0%, 0%, 0.791), hsla(0, 0%, 0%, 0.791));
+            background-image: linear-gradient(to left, hsla(240, 100%, 50%, 0.811), hsla(240, 100%, 50%, 0.811), hsla(240, 100%, 50%, 0.811), hsla(0, 0%, 0%, 0.791));
+        }
+
+        nav {
+            background-image: linear-gradient(to left, hsla(240, 100%, 50%, 0.811), hsla(240, 100%, 50%, 0.811), hsla(240, 100%, 50%, 0.811), hsla(0, 0%, 0%, 0.791));
+        }
+        .menu-icon {
+            color: orange;
         }
 
         .nav-logo {
@@ -64,11 +71,8 @@
            height: 700px;
             margin-top: 50px;
          }
-
-
          .footer-img {
-            /* background-image: url(images/laptop-backgroud.jpg); */
-            background-color: hsla(0, 0%, 50%, 0.382);
+            background-color: hsla(0, 0%, 50%, 0.169);
             height: auto;
             color: lightgrey;
             width: 100%;
@@ -76,23 +80,31 @@
             background-size: cover;
         }
 
+        .footer-header {
+            margin: 50px 30px 0px 30px
+        }
+
         .footer-list {
             list-style-type: none;
-            color: black;
+            color: lightgrey;
             line-height: 40px;
             font-size: 18px;
             font-weight: lighter;
         }
 
+        .footer-list2 {
+            margin-top: 40px;
+        }
+
         .footer-paraghap-list {
-            color: black;
+            color: lightgrey;
             line-height: 40px;
             width: 80%;
-            margin: 0px auto;
+            margin-left: 20px;
         }
 
         .footer-link {
-            color: black;
+            color: lightgrey;
             line-height: 40px;
             font-size: 18px;
             font-weight: lighter;
@@ -115,6 +127,79 @@
             height: 80px;
             margin-top: 50px;
         }
+
+        @media (max-width:780px) {
+            .footer-list {
+                line-height: 30px;
+                font-size: 16px;
+            }
+
+            .footer-paraghap-list {
+                line-height: 30px;
+            }
+
+            .footer-link {
+                line-height: 30px;
+                font-size: 16px;
+            }
+
+            .footer-header {
+                font-size: 20px;
+                margin-top: 20px;
+            }
+        }
+
+        @media (max-width:765px) {
+
+            .footer-link {
+                line-height: 27px;
+                font-size: 16px;
+            }
+
+            .footer-header {
+                font-size: 18px;
+                font-weight: bolder;
+                margin-top: 15px;
+            }
+
+            .footer-list2 {
+                margin-top: 10px;
+            }
+
+            .img-item {
+                height: 400px;
+            }
+        }
+
+        @media (max-width:400px) {
+            .footer-list {
+                line-height: 25px;
+                font-size: 14px;
+            }
+
+            .footer-paraghap-list {
+                line-height: 25px;
+            }
+
+            .footer-link {
+                line-height: 25px;
+                font-size: 14px;
+            }
+
+            .footer-header {
+                font-size: 18px;
+                font-weight: bolder;
+                margin-top: 15px;
+            }
+
+            .footer-list2 {
+                margin-top: 12px;
+            }
+
+            .img-item {
+                height: 350px;
+            }
+        }
     </style>
 </head>
 
@@ -126,7 +211,7 @@
                     <span class="text-light"><span style="color:orange;">Amy</span>Accessory</span>
                 </a>
     
-                <button class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#main-nav"
+                <button class="navbar-toggler menu-icon" data-bs-toggle="collapse" data-bs-target="#main-nav"
                     aria-label=" toggler navigation" aria-controls="main-nav">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -189,17 +274,18 @@
             <div class="container-fliud footer-img">
                 <div class="container-fliud mx-4">
                     <div class="row">
-                        <div class="col-12 col-lg-5 col-md-5 ">
-                            <h3 class="mt-5 ms-5 text-capitalize">Amy Eletronics Accessories</h3>
-                            <p class="footer-paraghap-list mt-4">Welcome to Amy Accessories, your trusted destination
+                        <div class="col-12 col-lg-5 col-md-5 footer-container">
+                            <h3 class=" text-capitalize  footer-header">Amy Eletronics Accessories</h3>
+                            <p class="footer-paraghap-list footer-list2">Welcome to Amy Accessories, your trusted destination
                                 for high quality eletronic accessories. We stand behind our produts with 6-months
                                 guarantee, ensuring you can shop with confindence. Our mission is is to make the latest
                                 eletronic devices easily accessible to eyeryone</p>
                         </div>
-                        <div class="col-12 col-lg-2 col-md-2 fs-md-5">
-                            <h3 class="mt-5 ms-3 text-capitalize">Menu</h3>
+                        <div class="col-12 col-lg-2 col-md-2 fs-md-5 footer-container">
+                            <h3 class=" text-capitalize  footer-header">Menu</h3>
                             <ul>
-                                <li class="footer-list mt-4"><a href="/shop.html" class="footer-link">Shop</a></li>
+                                <li class="footer-list footer-list2"><a href="/shop.html" class="footer-link">Shop</a>
+                                </li>
                                 <li class="footer-list"><a href="/Mobile.html" class="footer-link">Mobile</a></li>
                                 <li class="footer-list"><a href="/Computers.html" class="footer-link">Computers</a></li>
                                 <li class="footer-list"><a href="/Accessories.html" class="footer-link">Accessories</a>
@@ -209,14 +295,15 @@
                                 <li class="footer-list"><a href="/contact.html" class="footer-link">Contact</a></li>
                             </ul>
                         </div>
-                        <div class="col-12 col-lg-5 col-md-5">
-                            <h3 class="mt-5 ms-5 text-capitalize">INFO</h3>
+                        <div class="col-12 col-lg-5 col-md-5 footer-container">
+                            <h3 class=" text-capitalize  footer-header">INFO</h3>
                             <ul>
-                                <li class="footer-list mt-4">Adderss: Kwankwashe Street, opposite IBB market Niger</li>
+                                <li class="footer-list footer-list2">Adderss: Kwankwashe Street, opposite IBB market
+                                    Niger</li>
                                 <li class="footer-list">State: Niger State</li>
                                 <li class="footer-list">Email: amyogechi@gmail.com</li>
                                 <li class="footer-list">Phone: 234-812-099-1981</li>
-
+    
                             </ul>
                         </div>
                     </div>
@@ -233,7 +320,6 @@
                 </div>
             </div>
         </footer>
-    </div>
 </body>
 
 </html>
