--- a/index.html
+++ b/index.html
@@ -12,20 +12,22 @@
         crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/693dd61249.js" crossorigin="anonymous"></script>
     <style>
+        /* Body backgroun color */
         .main-background {
             background-color: black;
         }
 
+        /* Head background image */
         .background {
             background-image: url(images/camera-7903435_1280.webp);
             background-position: center;
             filter: brightness(80%);
             height: auto;
             margin-bottom: 10px;
-            /* background-image: linear-gradient(left black, brown); */
             background-size: cover;
         }
 
+        /* Nav logo */
         .nav-logo {
             text-decoration: none;
             font-size: 25px;
@@ -33,10 +35,12 @@
             font-style: oblique;
         }
 
+        /* nav list */
         .nav-list {
             width: 100%;
         }
 
+        /* nav links */
         .a-link {
             color: black;
         }
@@ -52,6 +56,7 @@
             margin-left: 100px;
         }
 
+        /* nav icons */
         .nav-icons:hover {
             color: white;
         }
@@ -97,7 +102,7 @@
             height: 390px;
             border-radius: 5px;
             width: 100%;
-            border:3px solid orange;
+            border: 3px solid orange;
         }
 
         .img-items:hover {
@@ -189,8 +194,8 @@
             opacity: 80%;
             color: white;
         }
+
         .footer-img {
-            /* background-image: url(images/laptop-backgroud.jpg); */
             background-color: hsla(0, 0%, 50%, 0.169);
             height: auto;
             color: lightgrey;
@@ -199,23 +204,31 @@
             background-size: cover;
         }
 
+        .footer-header {
+            margin: 50px 30px 0px 30px
+        }
+
         .footer-list {
             list-style-type: none;
-            color: rgb(190, 182, 182);
+            color: lightgrey;
             line-height: 40px;
             font-size: 18px;
             font-weight: lighter;
         }
 
+        .footer-list2 {
+            margin-top: 40px;
+        }
+
         .footer-paraghap-list {
-            color: rgb(190, 182, 182);
+            color: lightgrey;
             line-height: 40px;
             width: 80%;
-            margin: 0px auto;
+            margin-left: 20px;
         }
 
         .footer-link {
-            color: rgb(190, 182, 182);
+            color: lightgrey;
             line-height: 40px;
             font-size: 18px;
             font-weight: lighter;
@@ -238,13 +251,159 @@
             height: 80px;
             margin-top: 50px;
         }
+
+        @media (max-width:780px) {
+            .footer-list {
+                line-height: 30px;
+                font-size: 16px;
+            }
+
+            .footer-paraghap-list {
+                line-height: 30px;
+            }
+
+            .footer-link {
+                line-height: 30px;
+                font-size: 16px;
+            }
+
+            .footer-header {
+                font-size: 20px;
+                margin-top: 20px;
+            }
+        }
+
+        @media (max-width:765px) {
+
+            .footer-link {
+                line-height: 27px;
+                font-size: 16px;
+            }
+
+            .footer-header {
+                font-size: 18px;
+                font-weight: bolder;
+                margin-top: 15px;
+            }
+
+            .footer-list2 {
+                margin-top: 10px;
+            }
+            .phone-img {
+                height:550px;
+            }
+
+            .laptop-background {
+                margin-top:5px;
+                height: 400px;
+                object-fit: cover;
+                width: 100%;
+            }
+
+            .laptop-img-content {
+                font-size: 16px;
+            }
+
+            .signup-lable {
+                margin-bottom:50px;
+
+            }
+
+            .signup-lable h3 {
+                font-size: 16px;
+            }
+            .background {
+            width:100%;
+        }
+        .background-label {
+            margin-top:400px;
+            margin-left:5px;
+        }
+        .background-label h4{
+       font-size:15px;
+        }
+        }
+
+        @media (max-width:500px) {
+            .img-items {
+                height: 350px;
+            }
+
+            .phone-img {
+                height: 500px;
+            }
+
+        }
+
+        @media (max-width:400px) {
+            .img-item {
+                height: 300px;
+            }
+
+            .phone-img {
+                height: 400px;
+            }
+
+            .laptop-background {
+                margin-top: 0px;
+                height: 400px;
+                object-fit: cover;
+                width: 100%;
+            }
+
+            .laptop-img-content {
+                font-size: 14px;
+            }
+
+            .signup-lable {
+                margin-bottom: 50px;
+
+            }
+
+            .signup-lable h3 {
+                font-size: 14px;
+            }
+            .background {
+            width: 100%;
+        }
+        .background-label {
+            margin-top: 300px;
+            margin-left:5px;
+        }
+        .background-label h4{
+       font-size:12px;
+        }
+            .footer-list {
+                line-height: 25px;
+                font-size: 14px;
+            }
+
+            .footer-paraghap-list {
+                line-height: 25px;
+            }
+
+            .footer-link {
+                line-height: 25px;
+                font-size: 14px;
+            }
+
+            .footer-header {
+                font-size: 18px;
+                font-weight: bolder;
+                margin-top: 15px;
+            }
+
+            .footer-list2 {
+                margin-top: 12px;
+            }
+        }
     </style>
 </head>
 
 <body>
     <div class="container-fliud main-background">
         <div class="container-fliud background">
-            <nav class="navbar navbar-expand-md">
+            <nav class="navbar navbar-expand-lg">
                 <div class="container-xxl">
                     <a href="index.html" id="top" class="nav-brand nav-logo">
                         <span><span style="color:orange;">Amy</span>Accessory</span>
@@ -270,10 +429,12 @@
                                 <li>
                                     <hr class="divider">
                                 </li>
-                                <li class="nav-list"><a href="Accessories.html" class="nav-link a-link ">Accessories</a></li>
+                                <li class="nav-list"><a href="Accessories.html" class="nav-link a-link ">Accessories</a>
+                                </li>
                                 <li>
                                     <hr class="divider">
-                                <li class="nav-list"><a href="Appliances.html" class="nav-link a-link ">Appliances</a></li>
+                                <li class="nav-list"><a href="Appliances.html" class="nav-link a-link ">Appliances</a>
+                                </li>
                                 <li>
                                     <hr class="divider">
                                 </li>
@@ -308,14 +469,16 @@
                 <div class="container-fliud img-container">
                     <div class="row gy-4 mx-sm-3">
                         <div class="col-lg-6 col-xl-3 col-md-6 col-sm-12">
-                          <a href="each-products/bluetooth2.html"> <img src="/images/bluetooth.jpg" class="w-100 img-items" alt=""></a>
+                            <a href="each-products/bluetooth2.html"> <img src="/images/bluetooth.jpg"
+                                    class="w-100 img-items" alt=""></a>
                             <div class="img-text">
                                 <h5>potable bluetooth speaker</h5>
                                 <span>$7000</span>
                             </div>
                         </div>
                         <div class="col-lg-6 col-xl-3 col-md-6 col-sm-12">
-                          <a href="/each-products/camera1.html">  <img src="/images/cam1,1.webp" class="w-100 img-items" alt=""></a>
+                            <a href="/each-products/camera1.html"> <img src="/images/cam1,1.webp"
+                                    class="w-100 img-items" alt=""></a>
                             <div class="img-text">
                                 <h5> small potable camera</h5>
                                 <span>$7000</span>
@@ -323,14 +486,16 @@
                         </div>
 
                         <div class="col-lg-6 col-xl-3 col-md-6 col-sm-12">
-                          <a href="each-products/earbud1.html">  <img src="/images/pod3,1.webp" class="w-100 img-items" alt=""></a>
+                            <a href="each-products/earbud1.html"> <img src="/images/pod3,1.webp" class="w-100 img-items"
+                                    alt=""></a>
                             <div class="img-text">
                                 <h5>wireless earbud headphones</h5>
                                 <span>$7000</span>
                             </div>
                         </div>
                         <div class="col-lg-6 col-xl-3 col-md-6 col-sm-12">
-                           <a href="/each-products/mouse1.html"><img src="images/mouse2,1.webp" class="w-100 img-items" alt=""></a>
+                            <a href="/each-products/mouse1.html"><img src="images/mouse2,1.webp" class="w-100 img-items"
+                                    alt=""></a>
                             <div class="img-text">
                                 <h5> small potable mouse</h5>
                                 <span>$7000</span>
@@ -384,21 +549,24 @@
             </section>
         </main>
         <footer>
+            <!-- footer -->
             <div class="container-fliud footer-img">
                 <div class="container-fliud mx-4">
                     <div class="row">
-                        <div class="col-12 col-lg-5 col-md-5 ">
-                            <h3 class="mt-5 ms-5 text-capitalize">Amy Eletronics Accessories</h3>
-                            <p class="footer-paraghap-list mt-4">Welcome to Amy Accessories, your trusted destination
+                        <div class="col-12 col-lg-5 col-md-5 footer-container">
+                            <h3 class=" text-capitalize  footer-header">Amy Eletronics Accessories</h3>
+                            <p class="footer-paraghap-list footer-list2">Welcome to Amy Accessories, your trusted
+                                destination
                                 for high quality eletronic accessories. We stand behind our produts with 6-months
                                 guarantee, ensuring you can shop with confindence. Our mission is is to make the latest
                                 eletronic devices easily accessible to eyeryone</p>
                         </div>
-                        <div class="col-12 col-lg-2 col-md-2 fs-md-5">
-                            <h3 class="mt-5 ms-3 text-capitalize">Menu</h3>
+                        <div class="col-12 col-lg-2 col-md-2 fs-md-5 footer-container">
+                            <h3 class=" text-capitalize  footer-header">Menu</h3>
                             <ul>
-                                <li class="footer-list mt-4"><a href="shop.html" class="footer-link">Shop</a></li>
-                                <li class="footer-list"><a href="Mobile.html" class="footer-link">Mobile</a></li>
+                                <li class="footer-list footer-list2"><a href="shop.html" class="footer-link">Shop</a>
+                                </li>
+                                <li class="footer-list"><a href="#top" class="footer-link">Mobile</a></li>
                                 <li class="footer-list"><a href="Computers.html" class="footer-link">Computers</a></li>
                                 <li class="footer-list"><a href="Accessories.html" class="footer-link">Accessories</a>
                                 </li>
@@ -407,10 +575,11 @@
                                 <li class="footer-list"><a href="contact.html" class="footer-link">Contact</a></li>
                             </ul>
                         </div>
-                        <div class="col-12 col-lg-5 col-md-5">
-                            <h3 class="mt-5 ms-5 text-capitalize">INFO</h3>
+                        <div class="col-12 col-lg-5 col-md-5 footer-container">
+                            <h3 class=" text-capitalize  footer-header">INFO</h3>
                             <ul>
-                                <li class="footer-list mt-4">Adderss: Kwankwashe Street, opposite IBB market Niger</li>
+                                <li class="footer-list footer-list2">Adderss: Kwankwashe Street, opposite IBB market
+                                    Niger</li>
                                 <li class="footer-list">State: Niger State</li>
                                 <li class="footer-list">Email: amyogechi@gmail.com</li>
                                 <li class="footer-list">Phone: 234-812-099-1981</li>
@@ -425,11 +594,10 @@
                             <div class="col-3 "><span class="copy-right">&copy; 2025 by AmyAccessory</span></div>
                         </div>
                         <!-- <div class="col-12 col-lg-3 col-md-3">
-                        <h3 class="mt-4 text-capitalize">Socail media</h3>
-                    </div> -->
+                    <h3 class="mt-4 text-capitalize">Socail media</h3>
+                </div> -->
                     </div>
                 </div>
-                <span><a href="#top" class="text-light btn btn-dark">Back to Top</a></span>
             </div>
         </footer>
     </div>
