--- a/shop.html
+++ b/shop.html
@@ -47,10 +47,24 @@
             color: orange;
         }
 
-        .nav-icons:hover {
-            color: white;
+        .nav-icons{
+            color:white;
         }
 
+        .nav-icons:hover {
+            color: orange;
+        }
+        .link{
+            display:none;
+        }
+      
+        .login-link {
+            font-size:15px;
+            color: white;
+        }
+        .login-link:hover{
+            color: orange;
+        }
         .main-list {
             list-style-type: none;
             margin-top: 15px;
@@ -335,9 +349,16 @@
                     <!-- <a href="" class="but-group"><button
                                 class=" btn btn-outline-dark text-capitalize mx-4">login</button></a> -->
                     <div class="mt-2 mx-lg-5 ">
-                        <i class="fa-solid fa-user nav-icons p-2"></i>
                         <i class="fa-solid fa-heart nav-icons p-2"></i>
                         <i class="fa-solid fa-cart-shopping nav-icons p-2"></i>
+                        <i class="fa-solid fa-user nav-icons p-2" id="user"> </i>
+                            <div class="link" id="login">
+                                <ul class="breadcrumb">
+                                    <li class="breadcrumb-item"><a href="#" class="login-link">Login</a></li>
+                                    <li class="breadcrumb-item text-light"> <a href="#" class="login-link">Sign In</a>
+                                    </li>
+                                </ul>
+                            </div>
                     </div>
                 </div>
             </div>
@@ -502,6 +523,15 @@
             </div>
         </footer>
     </div>
+
+    
+    <script>
+        let login = document.getElementById('login');
+        let user = document.getElementById('user')
+        user.addEventListener('click', () => {
+            login.classList.toggle('link')
+        })
+    </script>
 </body>
 
 </html>
